erDiagram
    PACIENTES ||--o{ CARTEIRINHAS : possui
    PACIENTES ||--o{ GUIAS : solicita
    PLANOS_SAUDE ||--o{ CARTEIRINHAS : emite
    CARTEIRINHAS ||--o{ GUIAS : autoriza
    GUIAS ||--o{ EXECUCOES : gera
    PROCEDIMENTOS ||--o{ GUIAS : define
    FICHAS_PRESENCA ||--o{ SESSOES : contem
    SESSOES ||--o{ EXECUCOES : registra
    USUARIOS ||--o{ EXECUCOES : realiza
    LOTES_FATURAMENTO ||--o{ FICHAS_PRESENCA : agrupa
    DIVERGENCIAS }o--|| FICHAS_PRESENCA : identifica
    DIVERGENCIAS }o--|| EXECUCOES : relaciona
    DIVERGENCIAS }o--|| SESSOES : verifica

    PACIENTES {
        uuid id PK
        text nome
        text cpf
        jsonb endereco
    }
    
    CARTEIRINHAS {
        uuid id PK
        uuid paciente_id FK
        varchar numero_carteirinha
        date data_validade
        status_carteirinha status
    }

    GUIAS {
        uuid id PK
        text numero_guia
        date data_emissao
        tipo_guia tipo
        status_guia status
        integer quantidade_autorizada
    }

    FICHAS_PRESENCA {
        uuid id PK
        text codigo_ficha
        text numero_guia
        date data_atendimento
        status_ficha status
    }

    SESSOES {
        uuid id PK
        uuid ficha_presenca_id FK
        date data_sessao
        boolean possui_assinatura
        status_sessao status
    }

    EXECUCOES {
        uuid id PK
        uuid guia_id FK
        uuid sessao_id FK
        date data_execucao
        text codigo_ficha
    }

    DIVERGENCIAS {
        uuid id PK
        text tipo_divergencia
        text status
        date data_identificacao
        uuid ficha_id FK
        uuid execucao_id FK
    }

    LOTES_FATURAMENTO {
        uuid id PK
        text numero_lote
        timestamptz data_envio
        numeric valor_total
    }
